# kukulator

./: README.md
kukulator_final/: README.md  kukulator.h  kukulator.qrc  kukulator.ui  kukulator_final.sln  kukulator_final.vcxproj  kukulator_final.vcxproj.filters  main.cpp
kukulator_final/kukulator_final/: CMakeLists.txt  kukulator.cpp  kukulator.ui  kukulator_final.vcxproj  kukulator_final.vcxproj.filters
kukulator_final/kukulator_final/x64/Debug/kukulator_final.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  kukulator_final.write.1u.tlog  link.read.1.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
kukulator_final/kukulator_final/x64/Debug/moc/: moc_kukulator.cpp
kukulator_final/kukulator_final/x64/Debug/qmake/: qtvars_x64_Debug.props
kukulator_final/kukulator_final/x64/Debug/qmake/temp/: FF8C4281-F14B-4524-A73D-9335FEB63B66.kukulator_final.designtime.idx  qtvars.vcxproj
kukulator_final/kukulator_final/x64/Debug/uic/: ui_kukulator.h
kukulator_final/x64/Debug/: kukulator_final.exe.recipe  kukulator_final.ilk
kukulator_final/x64/Debug/kukulator_final.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kukulator_final.lastbuildstate  kukulator_final.write.1u.tlog  link.command.1.tlog  link.write.1.tlog  moc.read.1u.tlog  rcc.read.1u.tlog
kukulator_final/x64/Debug/rcc/: qrc_kukulator.cpp
kukulator_final/x64/Debug/uic/: ui_kukulator.h
